feat: custom libraries

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "calculator-robotframework"
+name = "robot-showcase"
 version = "0.1.0"
 description = ""
 authors = ["alexanderschmitz <alexander.schmitz98@outlook.com>"]
@@ -8,13 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = ">=3.10,<3.14"
 robotframework = "^7.2.2"
-robotframework-autoitlibrary = "^1.2.9"
 opencv-python = "^4.11.0.86"
 pyautogui = "^0.9.54"
 numpy = "^2.2.5"
 pillow = "^11.2.1"
-robotframework-flaui = "^4.0.0"
-pythonnet = "^3.0.5"
+pywinauto = "^0.6.9"
 
 
 [build-system]
